# twitterak

./: CMakeLists.txt  credits.hpp  stringtolower.hpp  to compile files.txt  tweet.hpp
include/: account.hpp  checkuser.hpp  edit.hpp  help.hpp  loggedin.hpp  menu.hpp  password.hpp  signup.hpp  twitterak.hpp
src/: account.cpp  checkuser.cpp  credits.cpp  edit.cpp  help.cpp  loggedin.cpp  main.cpp  menu.cpp  password.cpp  signup.cpp  stringtolower.cpp  tweet.cpp  twitterak.cpp
